# Jumping_Jett

./: .gitignore  CMakeLists.txt  desktop.ini  dimensions.h  game.cpp  game.h  jumpingjett-view.cpp  jumpingjett-view.h  main.cpp  obstacle.h  orb.h  player.h  variable.h  view.cpp  view.h
